logo in gallery html

--- a/index.html
+++ b/index.html
@@ -89,11 +89,15 @@
         </div>
     </div>
 
-    <header class="w-full h-24 py-4">
+    <header class="w-full h-24">
         <nav class="h-full flex justify-between items-center mx-4 lg:mx-8 gap-4">
             <!-- Back Navigation -->
-            <div class="w-full md:w-fit flex justify-between">
+            <div class="w-full md:w-fit flex justify-between items-center">
                 <i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i>
+                <div class="cursor-pointer text-center block md:hidden">
+                    <img src="./assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12 mx-auto">
+                    <h1 class="font-bold tracking-widest">KAPUSTAKAN.</h1>
+                </div>
                 <span class="text-3xl cursor-pointer block md:hidden open-nav">
                     <i id="menu" class="fa fa-bars"></i>
                 </span>
