fixing color and header size

--- a/details-collection.html
+++ b/details-collection.html
@@ -15,14 +15,27 @@
     />
     <!-- Independent CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'emas-keraton': '#D6A82E',
+                        'hijau-keraton': '#0F2A12',
+                    },
+                }
+            }
+        }
+    </script>
 </head>
 
 <body class="h-screen flex flex-col">
-    <header class="w-full h-24 py-4">
-        <nav class="h-full flex justify-between items-center mx-8 lg:mx-12 gap-4">
+    <header class="w-full">
+        <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8 gap-4">
             <!-- Back Navigation -->
             <div>
-                <a href="./index.html"><i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i></a>
+                <a href="./index.html"><i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i></a>
             </div>
             <!-- Logo -->
             <div class="cursor-pointer">
@@ -40,7 +53,7 @@
             <div class="grow my-4 md:my-0 cursor-pointer">
                 <img src="./assets/icon/pdf.svg" alt="pdf-icon" title="Download Dokumen">
             </div>
-            <button class="w-1/2 h-fit bg-[#184D47] text-white text-md md:text-xl py-2 tracking-widest">
+            <button class="w-1/2 h-fit bg-hijau-keraton text-white text-md md:text-xl py-2 tracking-widest">
                 <a href="./sumber-bunyi.html">LIHAT KOLEKSI</a>
             </button>
         </div>
