--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             theme: {
                 extend: {
                     colors: {
-                        'emas-keraton': '#D7A84C',
-                        'hijau-keraton': '#184D47',
-                        'hijau-keraton-muda': '#758B76'
+                        'emas-keraton': '#D6A82E',
+                        'hijau-keraton': '#0F2A12',
                     },
                     boxShadow: {
                         'mia-style': '0px 0px 29px 10px #D7A84C'
@@ -67,7 +66,7 @@
             <div class="body-nav-mobile flex flex-col relative grow">
                 <h1 class="font-md">Pencarian Koleksi</h1>
                 <div class="w-full flex border-b border-hijau-keraton items-center mb-4">
-                    <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton-muda search-bar" placeholder="Apa Cari Kak?">
+                    <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton search-bar" placeholder="Apa Cari Kak?">
                     <i class="fa-solid fa-magnifying-glass text-hijau-keraton text-xl"></i>
                 </div>
 
@@ -89,8 +88,8 @@
         </div>
     </div>
 
-    <header class="w-full h-24">
-        <nav class="h-full flex justify-between items-center mx-4 lg:mx-8 gap-4">
+    <header class="w-full">
+        <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8 gap-4">
             <!-- Back Navigation -->
             <div class="w-full md:w-fit flex justify-between items-center">
                 <i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i>
@@ -108,7 +107,7 @@
             </div> -->
             <div class="hidden md:flex md:gap-4 grow md:grow-0 justify-between md:justify-start ">
                 <div class="w-1/2 md:w-80 flex border-b border-hijau-keraton items-center m-2 px-2">
-                    <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton-muda search-bar" placeholder="Apa Cari Kak?">
+                    <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton search-bar" placeholder="Apa Cari Kak?">
                     <i class="fa-solid fa-magnifying-glass text-hijau-keraton text-xl"></i>
                 </div>
 
@@ -123,17 +122,17 @@
                     </ul>
 
                     <ul class="select_ul absolute left-0 top-10 border w-full hidden z-40 bg-white">
-                        <li class="p-2 hover:bg-hijau-keraton-muda cursor-pointer">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option all">
                                 <p class="tracking-widest">semua gamelan</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda cursor-pointer">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option hageng">
                                 <p class="tracking-widest">hageng</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda cursor-pointer">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">pakurmatan</p>
                             </div>
