--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -22,9 +22,8 @@
             theme: {
                 extend: {
                     colors: {
-                        'emas-keraton': '#D7A84C',
-                        'hijau-keraton': '#184D47',
-                        'hijau-keraton-muda': '#87B689'
+                        'emas-keraton': '#D6A82E',
+                        'hijau-keraton': '#0F2A12',
                     },
                 }
             }
@@ -33,11 +32,11 @@
 </head>
 
 <body class="w-full md:h-screen flex flex-col">
-    <header class="w-full h-24 py-4">
-        <nav class="h-full flex justify-between items-center mx-4 lg:mx-8">
+    <header class="w-full">
+        <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8">
             <!-- Back Navigation -->
             <div>
-                <a href="./index.html"><i class="fa-solid fa-arrow-left text-xl cursor-pointer"></i></a>
+                <a href="./index.html"><i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i></a>
             </div>
             <!-- Logo -->
             <div class="cursor-pointer">
@@ -54,7 +53,7 @@
             <!-- Select Box -->
             <div class="p-1 w-full md:w-1/4">
                 <div class="select_wrap h-full relative border">
-                    <ul class="default_option bg-hijau-keraton relative cursor-pointer text-white">
+                    <ul class="default_option bg-hijau-keraton border border-hijau-keraton relative cursor-pointer text-white">
                         <li class="p-2">
                             <div class="option">
                                 <p class="tracking-widest">sumber bunyi</p>
@@ -63,32 +62,32 @@
                     </ul>
 
                     <ul class="select_ul absolute left-0 top-10 border w-full hidden z-40 bg-white">
-                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option all">
                                 <p class="tracking-widest">informasi umum</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option hageng">
                                 <p class="tracking-widest">rancak</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">sumber bunyi</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">elemen pendukung</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">keunikan</p>
                             </div>
                         </li>
-                        <li class="p-2 hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                        <li class="p-2 hover:bg-hijau-keraton hover:text-white cursor-pointer">
                             <div class="option pakurmatan">
                                 <p class="tracking-widest">catatan</p>
                             </div>
@@ -108,7 +107,7 @@
 
                 <div class="accordion__wrapper w-full md:w-2/3 h-96 md:h-full max-h-full overflow-y-scroll p-2 grow">
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -135,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -162,7 +161,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -189,7 +188,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -215,34 +214,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
-                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
-                            <div class="grow flex justify-between">
-                                <div class="bentuk w-full">
-                                    <h1 class="font-bold">Bentuk</h1>
-                                    <p>Pencu</p>
-                                </div>
-                                <div class="bahan w-full hidden md:block">
-                                    <h1 class="font-bold">Bahan</h1>
-                                    <p>Perunggu</p>
-                                </div>
-                                <div class="kualitas w-full hidden md:block">
-                                    <h1 class="font-bold">Kualitas Bahan</h1>
-                                    <p>Bagus</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
-                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
-                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
-                                repudiandae pariatur ea. Lorem ipsum dolor,
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
@@ -269,7 +241,34 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton-muda hover:bg-opacity-75">
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
+                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="grow flex justify-between">
+                                <div class="bentuk w-full">
+                                    <h1 class="font-bold">Bentuk</h1>
+                                    <p>Pencu</p>
+                                </div>
+                                <div class="bahan w-full hidden md:block">
+                                    <h1 class="font-bold">Bahan</h1>
+                                    <p>Perunggu</p>
+                                </div>
+                                <div class="kualitas w-full hidden md:block">
+                                    <h1 class="font-bold">Kualitas Bahan</h1>
+                                    <p>Bagus</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
+                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
+                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
+                                repudiandae pariatur ea. Lorem ipsum dolor,
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
                             <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
