--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 
-<body class="h-screen flex flex-col relative">
+<body class="h-screen flex flex-col relative overflow-hidden">
     <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden">
         <div class="flex w-5/6 md:w-1/2 h-1/3 shadow bg-white flex-col items-center justify-center border-4 border-emas-keraton rounded-lg p-4">
             <div class="loader ease-linear rounded-full border-4 border-t-4 border-t-hijau-keraton border-gray-200 h-12 w-12 mb-4"></div>
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="w-full h-full absolute z-40 flex items-start justify-end bg-black bg-opacity-75 p-8 invisible md:hidden nav-mobile transition ease-in-out delay-150">
+    <div class="w-full h-full absolute z-40 flex items-start justify-end p-8 md:hidden nav-mobile transition ease-in-out delay-150 animate__animated animate__bounceOutRight">
         <div class="border w-full h-full p-4 rounded-lg bg-white flex flex-col">
             <div class="header-nav-mobile flex items-center justify-between mb-8 border-b border-black border-opacity-10">
                 <h1 class="text-2xl font-bold">Cari Koleksi</h1>
@@ -87,7 +87,7 @@
                 </div>
 
                 <h1 class="font-md">Jenis Koleksi :</h1>
-                <ul>
+                <ul> 
                     <li>
                         <input type="checkbox" name="" id="" class="mr-2">Semua Gamelan
                     </li>
