--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 
-<body class="h-screen flex flex-col relative overflow-hidden">
+<body class="md:h-screen flex flex-col relative overflow-x-hidden">
     <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden">
         <div class="flex w-5/6 md:w-1/2 h-1/3 shadow bg-white flex-col items-center justify-center border-4 border-emas-keraton rounded-lg p-4">
             <div class="loader ease-linear rounded-full border-4 border-t-4 border-t-hijau-keraton border-gray-200 h-12 w-12 mb-4"></div>
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="w-full h-full absolute z-40 flex items-start justify-end p-8 md:hidden nav-mobile transition ease-in-out delay-150 animate__animated animate__bounceOutRight">
+    <div class="w-full h-screen absolute z-40 flex items-start justify-end p-8 md:hidden nav-mobile transition ease-in-out delay-150 animate__animated animate__bounceOutRight">
         <div class="border w-full h-full p-4 rounded-lg bg-white flex flex-col">
             <div class="header-nav-mobile flex items-center justify-between mb-8 border-b border-black border-opacity-10">
                 <h1 class="text-2xl font-bold">Cari Koleksi</h1>
@@ -79,25 +79,30 @@
                     <i class="fa-solid fa-xmark"></i>
                 </span>
             </div>
-            <div class="body-nav-mobile flex flex-col relative grow">
+            <div class="body-nav-mobile flex flex-col h-fit relative grow">
                 <h1 class="font-md">Pencarian Koleksi</h1>
-                <div class="w-full flex border-b border-hijau-keraton items-center mb-4">
+                <div class="w-full md:w-80 flex border border-hijau-keraton items-center pl-4 pr-4">
                     <input type="text" class="w-full bg-transparent shadow-none outline-none border-none text-hijau-keraton search-bar" placeholder="Apa Cari Kak?">
-                    <i class="fa-solid fa-magnifying-glass text-hijau-keraton text-xl"></i>
+                    <button class="overflow-hidden h-full w-5 flex items-center button-search justify-between text-hijau-keraton hover:text-white">
+                        <i class="fa-solid fa-magnifying-glass hover:text-white cursor-pointer text-lg"></i>
+                        <p>Cari</p>
+                    </button>
                 </div>
 
-                <h1 class="font-md">Jenis Koleksi :</h1>
-                <ul> 
-                    <li>
-                        <input type="checkbox" name="" id="" class="mr-2">Semua Gamelan
-                    </li>
-                    <li>
-                        <input type="checkbox" name="" id="" class="mr-2">Gamelan Hageng
-                    </li>
-                    <li>
-                        <input type="checkbox" name="" id="" class="mr-2">Gamelan Pakurmatan
-                    </li>
-                </ul>
+                <div class="w-full border border-hijau-keraton mt-4 p-4">
+                    <h1 class="font-md">Jenis Koleksi :</h1>
+                    <ul> 
+                        <li>
+                            <input type="checkbox" name="" id="" class="mr-2">Semua Gamelan
+                        </li>
+                        <li>
+                            <input type="checkbox" name="" id="" class="mr-2">Gamelan Hageng
+                        </li>
+                        <li>
+                            <input type="checkbox" name="" id="" class="mr-2">Gamelan Pakurmatan
+                        </li>
+                    </ul>
+                </div>
 
                 <button class="btn-apply bg-hijau-keraton absolute bottom-0 p-2 w-full text-white rounded-lg">Terapkan</button>
             </div>
@@ -105,7 +110,7 @@
     </div>
 
     <header class="w-full">
-        <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8 gap-4 border">
+        <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8 gap-4">
             <!-- Back Navigation -->
             <div class="w-full md:w-fit flex justify-between items-center">
                 <i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i>
@@ -159,7 +164,7 @@
         </nav>
     </header>
 
-    <main class="grow w-full px-4 lg:px-8 overflow-y-scroll">
+    <main class="grow w-full px-4 lg:px-8 md:overflow-y-scroll">
         <div class="grid w-full py-12 gallery-container">
             <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4"></div>
             <div class="gutter-sizer w-[0%] sm:w-[5%] md:w-[3%] lg:w-[4%]"></div>
