--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </style>
 </head>
 
-<body class="w-screen md:h-screen flex flex-col relative overflow-x-hidden">
-    <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden">
+<body class="w-full h-screen md:h-screen flex flex-col md:relative overflow-x-hidden">
+    <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden top-0 left-0">
         <div class="flex w-5/6 md:w-1/2 h-1/3 shadow bg-white flex-col items-center justify-center border-4 border-emas-keraton rounded-lg p-4">
             <div class="loader ease-linear rounded-full border-4 border-t-4 border-t-hijau-keraton border-gray-200 h-12 w-12 mb-4"></div>
             <h2 class="text-center text-xl font-semibold">Sedang memuat gambare biar apik...</h2>
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="w-full h-screen absolute z-40 flex items-start justify-end p-8 md:hidden nav-mobile transition ease-in-out delay-150 animate__animated animate__bounceOutRight">
+    <div class="w-full h-screen absolute z-40 flex items-start justify-end p-8 md:hidden nav-mobile animate__animated animate__bounceOutRight hidden">
         <div class="border w-full h-full p-4 rounded-lg bg-white flex flex-col">
             <div class="header-nav-mobile flex items-center justify-between mb-8 border-b border-black border-opacity-10">
                 <h1 class="text-2xl font-bold">Cari Koleksi</h1>
@@ -114,7 +114,7 @@
             <!-- Back Navigation -->
             <div class="w-full md:w-fit flex justify-between items-center">
                 <i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i>
-                <div class="cursor-pointer text-center block md:hidden">
+                <div class="cursor-pointer text-center block md:hidden py-1 md:py-0">
                     <img src="./assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12 mx-auto">
                     <h1 class="font-bold tracking-widest">KAPUSTAKAN.</h1>
                 </div>
@@ -165,21 +165,15 @@
     </header>
 
     <main class="grow w-full px-4 lg:px-8 md:overflow-y-scroll">
-        <div class="grid w-full py-12 gallery-container">
+        <div class="grid w-full md:py-12 gallery-container">
             <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4"></div>
             <div class="gutter-sizer w-[0%] sm:w-[5%] md:w-[3%] lg:w-[4%]"></div>
         </div>
     </main>
 
-    <footer class="absolute bottom-5 bg-transparent flex justify-center w-full pagination-container">
-        <!-- <ul class="bg-white flex">
-            <li class="px-3 py-2"><i class="fa-solid fa-angle-left"></i></li>
-            <li class="px-3 py-2 active">1</li>
-            <li class="px-3 py-2">2</li>
-            <li class="px-3 py-2">3</li>
-            <li class="px-3 py-2"><i class="fa-solid fa-angle-right"></i></li>
-        </ul> -->
+    <footer class="static md:absolute md:bottom-5 bg-transparent flex justify-center w-full py-2 md:py-0 pagination-container">
     </footer>
+
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <script src="./assets/js/select-box.js"></script>
     <script src="./assets/js/pagination.js"></script>
