--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -13,6 +13,10 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+
+    <!-- Vendor Animate -->
+    <link rel="stylesheet" href="./assets/vendor/animate.min.css">
+
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/accordion-mia-style.css">
     <link rel="stylesheet" href="./assets/css/select-mia-style.css">
@@ -45,7 +49,7 @@
         </nav>
     </header>
 
-    <main class="w-full h-full grow px-4 lg:pl-24 lg:pr-8 pb-4 md:pb-12 flex flex-col md:overflow-y-hidden">
+    <main class="w-full h-full grow px-4 lg:pl-24 lg:pr-8 pb-4 md:pb-12 flex flex-col md:overflow-y-hidden animate__animated animate__fadeInDown">
         <div class="item-information flex flex-col md:flex-row items-center md:gap-4 mb-8 h-fit">
             <div class="w-full basis-full md:basis-auto md:w-fit md:max-w-2/4 p-1">
                 <h1 class="text-4xl md:text-6xl font-bold item-title leading-[4rem]">GONG</h1>
