--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body class="w-full h-screen md:h-screen flex flex-col md:relative overflow-x-hidden">
-    <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container hidden top-0 left-0">
+    <div class="w-full h-full absolute z-50 flex items-center justify-center bg-black bg-opacity-75 loader-container  top-0 left-0 hidden">
         <div class="flex w-5/6 md:w-1/2 h-1/3 shadow bg-white flex-col items-center justify-center border-4 border-emas-keraton rounded-lg p-4">
             <div class="loader ease-linear rounded-full border-4 border-t-4 border-t-hijau-keraton border-gray-200 h-12 w-12 mb-4"></div>
             <h2 class="text-center text-xl font-semibold">Sedang memuat gambare biar apik...</h2>
@@ -150,6 +150,7 @@
     </header>
 
     <main class="grow w-full px-4 lg:px-8 md:overflow-y-scroll ">
+        <h1>Menampilkan </h1>
         <div class="grid w-full pt-6 md:py-12 gallery-container ">
             <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4 "></div>
             <div class="gutter-sizer w-[0%] sm:w-[5%] md:w-[3%] lg:w-[4%] "></div>
