add new vendor masonry

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         }
     </script>
 
+    <script></script>
     <style type="text/tailwindcss">
         @layer utilities { .column-5{ width: 18.4%; margin-bottom: 2% } .column-4{ width: 22%; margin-bottom: 3%; } .column-3{ width: 31.33%; margin-bottom: 2%; } .column-2{ width: 47.5%; margin-bottom: 6%; } .column-1{ width: 100%; margin-bottom: 8%; } .picture-style{
         width: theme('width.full'); height: theme('height.auto'); object-fit: cover; border-radius: theme('borderRadius.lg'); border-width: theme('borderWidth.4'); border-color: theme('colors.emas-keraton'); cursor: pointer; transition-timing-function:
@@ -165,7 +166,7 @@
     <footer class="static md:absolute md:bottom-5 bg-transparent flex justify-center w-full py-2 md:py-0 pagination-container ">
     </footer>
 
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js "></script>
+    <script src="./assets/vendor/masonry.pkgd.min.js"></script>
     <script src="./assets/js/select-box.js "></script>
     <script src="./assets/js/pagination.js "></script>
     <script src="./assets/js/index.js "></script>
