fixing search & filter, add info pagination webv

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         }
     </script>
 
-    <script></script>
     <style type="text/tailwindcss">
         @layer utilities { .column-5{ width: 18.4%; margin-bottom: 2% } .column-4{ width: 22%; margin-bottom: 3%; } .column-3{ width: 31.33%; margin-bottom: 2%; } .column-2{ width: 47.5%; margin-bottom: 6%; } .column-1{ width: 100%; margin-bottom: 8%; } .picture-style{
         width: theme('width.full'); height: theme('height.auto'); object-fit: cover; border-radius: theme('borderRadius.lg'); border-width: theme('borderWidth.4'); border-color: theme('colors.emas-keraton'); cursor: pointer; transition-timing-function:
@@ -156,8 +155,8 @@
     </header>
 
     <main class="grow w-full px-4 lg:px-8 md:overflow-y-scroll ">
-        <h1>Menampilkan </h1>
-        <div class="grid w-full pt-6 md:py-12 gallery-container ">
+        <h1 class="my-6 italic border-b border-hijau-keraton">Menampilkan <span class="info-pagination font-bold text-emas-keraton">semua kategori</span></h1>
+        <div class="grid w-full  gallery-container">
             <div class="grid-sizer column-1 sm:column-2 md:column-3 lg:column-4 "></div>
             <div class="gutter-sizer w-[0%] sm:w-[5%] md:w-[3%] lg:w-[4%] "></div>
         </div>
