--- a/details-collection.html
+++ b/details-collection.html
@@ -32,7 +32,7 @@
     </script>
 </head>
 
-<body class="h-screen flex flex-col overflow-hidden">
+<body class="h-screen flex flex-col overflow-x-hidden">
     <header class="w-full">
         <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8 gap-4">
             <!-- Back Navigation -->
