--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Koleksi Gamelan Keraton">
+    <meta name="keywords" content="Gamelan Di Yogyakarta">
+    <meta name="author" content="Jeremia Daniel Silitonga">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamelan | Kapustakan</title>
     <!-- Favicon -->
