--- a/sumber-bunyi.html
+++ b/sumber-bunyi.html
@@ -110,10 +110,9 @@
                 </div>
 
                 <div class="accordion__wrapper w-full md:w-2/3 h-96 md:h-full max-h-full overflow-y-scroll p-2 grow">
-
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                    <div class="mb-2 bg-white hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
                                 <div class="bentuk w-full">
                                     <h1 class="font-bold">Bentuk</h1>
@@ -138,9 +137,9 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                    <div class="mb-2 bg-white hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
                                 <div class="bentuk w-full">
                                     <h1 class="font-bold">Bentuk</h1>
@@ -165,9 +164,9 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                    <div class="mb-2 bg-white hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
                                 <div class="bentuk w-full">
                                     <h1 class="font-bold">Bentuk</h1>
@@ -192,9 +191,9 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                    <div class="mb-2 bg-white hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
                                 <div class="bentuk w-full">
                                     <h1 class="font-bold">Bentuk</h1>
@@ -218,36 +217,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                    <div class="mb-2 bg-white hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
-                            <div class="grow flex justify-between">
-                                <div class="bentuk w-full">
-                                    <h1 class="font-bold">Bentuk</h1>
-                                    <p>Pencu</p>
-                                </div>
-                                <div class="bahan w-full hidden md:block">
-                                    <h1 class="font-bold">Bahan</h1>
-                                    <p>Perunggu</p>
-                                </div>
-                                <div class="kualitas w-full hidden md:block">
-                                    <h1 class="font-bold">Kualitas Bahan</h1>
-                                    <p>Bagus</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
-                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
-                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
-                                repudiandae pariatur ea. Lorem ipsum dolor,
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
-                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
                                 <div class="bentuk w-full">
                                     <h1 class="font-bold">Bentuk</h1>
@@ -272,9 +244,36 @@
                         </div>
                     </div>
 
-                    <div class="mb-2 bg-white hover:bg-hijau-keraton hover:text-white">
+                    <div class="mb-2 bg-white hover:text-white">
                         <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
-                            <div class="h-10 w-10 bg-hijau-keraton flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
+                            <div class="grow flex justify-between">
+                                <div class="bentuk w-full">
+                                    <h1 class="font-bold">Bentuk</h1>
+                                    <p>Pencu</p>
+                                </div>
+                                <div class="bahan w-full hidden md:block">
+                                    <h1 class="font-bold">Bahan</h1>
+                                    <p>Perunggu</p>
+                                </div>
+                                <div class="kualitas w-full hidden md:block">
+                                    <h1 class="font-bold">Kualitas Bahan</h1>
+                                    <p>Bagus</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel h-fit min-h-28 p-3.5 pt-0 text-justify hidden">
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae pariatur ea. Lorem
+                                ipsum dolor, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti, repudiandae
+                                pariatur ea. Lorem ipsum dolor,Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo inventore distinctio autem, ipsum quasi aut eveniet sint. Facere, voluptatum reprehenderit illo maiores officia nam error a corrupti,
+                                repudiandae pariatur ea. Lorem ipsum dolor,
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="mb-2 bg-white hover:text-white">
+                        <div class="accordion w-full px-3.5 py-6 relative border border-black flex">
+                            <div class="h-10 w-10 flex items-center justify-center key-note text-white mr-3.5">w</div>
                             <div class="grow flex justify-between">
                                 <div class="bentuk w-full">
                                     <h1 class="font-bold">Bentuk</h1>
